# thesis

./: .gitignore  Bibliography.bib  README.md  acronyms.tex  beamerinnerthemepolimi.sty  beamerthemepolimi.sty  bibliography.bib  classicthesis-config.tex  main.tex  presentation.tex  structure.tex  thesis.tex
Appendices/: appendix1.tex  appendix2.tex
Chapters/: chapter0.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter_template.tex  introduction.tex
Code/ekf_localization/: .clang-format  CMakeLists.txt  README.md  package.xml
Code/ekf_localization/config/: debug.rviz  my_config.rviz  params.yaml
Code/ekf_localization/include/ekf_localization/: commons.hpp  ekf.hpp  ekf_slam.hpp  landmark.hpp  map_manager.hpp  marker.hpp  pole.hpp  range.hpp
Code/ekf_localization/launch/: debug.launch  my_launch.launch
Code/ekf_localization/maps/: .qglviewer.xml  landmarks.map.yaml
Code/ekf_localization/msg/: QRCodePose.msg  QRCodeStamped.msg  QRCodeStampedArray.msg  RangeAndBearingPole.msg
Code/ekf_localization/resources/: jacobians.m
Code/ekf_localization/scripts/: build_plots.py
Code/ekf_localization/slides/: references.bib  thesis.tex
Code/ekf_localization/slides/styles/: beamercolorthemePOLIbeamer.sty  beamerinnerthemePOLIbeamer.sty  beamerouterthemePOLIbeamer.sty  beamerthemePOLIbeamer.sty
Code/ekf_localization/slides/styles/eps/: headerTitlePOLIMI.eps  pageBackground.eps
Code/ekf_localization/src/: commons.cpp  ekf_localization_node.cpp  ekf_slam.cpp  fake_marker_localization.cpp  fake_pole_localization.cpp  map_manager.cpp  marker.cpp  pole.cpp  qr_code_node.cpp  range.cpp
Code/ekf_localization/srv/: GetDroneState.srv  GetMarkerState.srv
FrontBackmatter/: Abstract.tex  Acknowledgments.tex  Acronyms.tex  Dedication.tex  Frontespizio.tex  FrontespizioIT.tex  RetroFrontespizio.tex
FrontBackmatter/AutoParts/: Bibliography.tex  Contents.tex
Images/: fig13-ros-basic-concept.eps
